--- a/examples/javascript/demo.html
+++ b/examples/javascript/demo.html
@@ -6,107 +6,38 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-        function start() {
-            var ip_in = document.getElementById("ip");
-            var port_in = document.getElementById("port");
-            window.ip = ip_in.value;
-            window.port = port_in.value;
-            console.log("Server is:" + window.ip + ":" + window.port);
-            link(window.ip, window.port);
-            return true;
-        }
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="vue.js"></script>
+    <script type="text/javascript" src="wsconnect.js"></script>
 
-        function Client() {
-
-        }
-        Client.prototype.createConnect = function(max, delay, server, port) {
-            var self = this;
-            if (max === 0) {
-                return;
-            }
-            connect(server, port);
-            var server_temp = server;
-            var port_temp = port;
-            var heartbeatInterval;
-
-            function connect(server, port) {
-                var ws = new WebSocket('ws://' + server + ':' + port + '/sub');
-                var auth = false;
-
-                ws.onopen = function() {
-                    getAuth();
-                }
-
-                ws.onmessage = function(evt) {
-                    var receives = JSON.parse(evt.data)
-                    for (var i = 0; i < receives.length; i++) {
-                        var data = receives[i]
-                        if (data.op == 8) {
-                            auth = true;
-                            heartbeat();
-                            heartbeatInterval = setInterval(heartbeat, 10 * 1000);
-                        }
-                        if (!auth) {
-                            setTimeout(getAuth, delay);
-                        }
-                        if (auth && data.op == 5) {
-                            var msg = JSON.stringify(data.body);
-                            console.log("Message:" + msg);
-                            alert("Message:" + msg);
-                        }
-                    }
-                }
-
-                ws.onclose = function() {
-                    if (heartbeatInterval) clearInterval(heartbeatInterval);
-                    setTimeout(reConnect, delay);
-                }
-
-                function heartbeat() {
-                    ws.send(JSON.stringify({
-                        'ver': 1,
-                        'op': 2,
-                        'seq': 2,
-                        'body': {}
-                    }));
-                }
-
-                function getAuth() {
-                    ws.send(JSON.stringify({
-                        'ver': 1,
-                        'op': 7,
-                        'seq': 1,
-                        'body': {
-                            'data': {}
-                        }
-                    }));
-                }
-
-                function reConnect() {
-                    if ((window.ip == server_temp) && (window.port == port_temp))
-                        self.createConnect(--max, delay * 2, window.ip, window.port);
-                    else return false;
-                }
-            }
-        }
-
-        function link(ip, port) {
-            var instance = new Client();
-            var MAX_CONNECT_TIME = 10;
-            var DELAY = 15000;
-            instance.createConnect(MAX_CONNECT_TIME, DELAY, window.ip, window.port);
-        }
-    </script>
 </head>
 
 <body>
     <h1>Client Demo</h1>
-    Server Settings:<br />
+    <h3>Settings:</h3>
+    Server Settings:<br /><br />
     <form id="server_setting">
-        Server IP:<input type="text" id="ip"> Port:<input type="text" id="port">
+        Server IP:<input type="text" id="ip" value="127.0.0.1"> Port:
+        <input type="text" id="port" value="8090">
         <button type="button" onclick="start()">Connect</button>
     </form>
+    <!-- curl -d "{\"name\":\"test\",\"msgbody\":\"1\"}" http://127.0.0.1:7172/1/push/all -->
+    <div id="s_msg">
+        <h3>Messages</h3>
+        <ol>
+            <li v-for="ms in show">
+                <b>{{ ms.name }}:</b>{{ ms.msgbody }}
+            </li>
+        </ol>
+    </div>
+    <script>
+        var msshow = new Vue({
+            el: '#s_msg',
+            data: {
+                show: window.message
+            }
+        })
+    </script>
 </body>
 
 </html>
