--- a/examples/javascript/demo.html
+++ b/examples/javascript/demo.html
@@ -4,9 +4,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>client demo</title>
-  </head>
-  <body>
-    <h1>client demo</h1>
     <script src="client.js"></script>
     <script>
       var client = new MyClient({
@@ -16,5 +13,13 @@
         }
       });
     </script>
+    <style type="text/css">
+        span{ display:block;}
+    </style>
+  </head>
+  <body>
+    <h1>client demo</h1>
+    <h2>message:</h2>
+    <div id="box"></div>
   </body>
 </html>
