--- a/examples/javascript/index.html
+++ b/examples/javascript/index.html
@@ -18,10 +18,15 @@
     </style>
   </head>
   <body>
-    <h1>websocket demo</h1>
-    <span id="session"></span>
+    <h1>websocket</h1>
     <h2>status:</h2>
     <span id="status"></span>
+    <h2>push</h2>
+    <div>
+        <p>curl -d 'mid message' http://api.goim.io:3111/goim/push/mids?operation=1000&mids=123</p>
+        <p>curl -d 'room message' http://api.goim.io:3111/goim/push/room?operation=1000&room=live://1000</p>
+        <p>curl -d 'broadcast message' http://api.goim.io:3111/goim/push/all?operation=1000</p>
+    </div>
     <h2>message:</h2>
     <div id="box"></div>
   </body>
